--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ html, body {
     margin-top: 25px;
     margin-bottom: 25px;
     margin-left: 200px;
-    font-size: 50px;
+    font-size: 60px;
     word-wrap: break-word;
     width: 300px;
     
@@ -39,6 +39,7 @@ html, body {
     align-self: center;
     font-size: 30px;
     margin-right: 250px;
+    font-size: 40px;
   }
    
   .mySlides {
@@ -97,9 +98,10 @@ html, body {
       color: white;
       background-color: #737373;
       border-width: 1px;
-      margin: 2% 10% 3% 10%;
+      margin: 2% 15% 3% 15%;
       border-radius: 4px;
       font-size: 18px;
+      box-shadow: 0px 0px 6px 1px black;
   }
 
   .tab {
@@ -107,14 +109,67 @@ html, body {
       margin: 20px 45px 20px 45px;
   }
   
-  .quote {
-      font-size: 40px;
+  .quote { 
+    font-size: 70px;
+    color: blue;
+    text-shadow: 0px 0px #737373;
       text-align: center;
       position: relative;
  } 
 
  .bullets {
      display: flex;
-     justify-content: space-evenly;
+     justify-content: space-between;
      align-items: flex-start;
+     margin-bottom: 7%;
+     text-align: center;
  }
+ .customer {
+    margin-left: 15%;
+ }
+
+ .coverage {
+     margin-right: 4%;
+ }
+
+ .business {
+     margin-right: 15%;
+ }
+
+ .visitme {
+     text-align: center;
+     font-size: 90px;
+     font-weight: bold;
+     color: grey;
+ }
+ .address {
+     margin-left: 15%;
+     font-size: 25px;
+ }
+
+ iframe {
+    width: 45%;
+    margin-left: 15%;
+ }
+
+p2 {
+    margin-left: 15%;
+    font-size: 24px;   
+}
+
+.personal {
+    margin-left: 15%;
+    font-size: 35px;
+    line-height: 1.3;
+    color: red;
+}
+
+.bottomnav img{
+    display: block;
+    margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
+    width: 70%;
+    height: 35em;
+}
+
