--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,6 @@ html, body {
     justify-content: space-between;
     background-image: linear-gradient( white, rgb(243, 243, 243));
    overflow: hidden;
-   margin-bottom: 5%;
   }
   
   #topnav a {
@@ -30,7 +29,6 @@ html, body {
 
   .company { 
     margin-top: 45px;
-    margin-bottom: 25px;
     margin-left: 200px;
     font-size: 70px;
     word-wrap: break-word;
@@ -42,62 +40,33 @@ html, body {
     align-self: center;
     font-size: 30px;
     margin-right: 250px;
+    margin-top: 25px;
     font-size: 40px;
     font-family: 'Alegreya', serif;
   }
    
-  .mySlides {
-    display: none;
-  }
-
-
-
-  .mySlides img {
-      width: 100%;
-      height: 38em;
-  }
-
-   * {
-       box-sizing: border-box;
-      }
-
-.slideshow-container {
-  max-width: 100%;
-  position: relative;
-  margin: auto;
+#slider {
+  margin-left: auto;
+  margin-right: auto;
+  width: 720px;
+  height: 400px;
+  overflow: hidden;
 }
 
-.dot {
-  max-height: 15px;
-  max-width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+#slider .slides {
+  display: block;
+  width: 6000px;
+  height: 400px;
+  margin: 0;
+  padding: 0;
 }
 
-.active {
-  background-color: #717171;
+#slider .slide {
+  float: left;
+  list-style-type: none;
+  width: 720px;
+  height: 400px;
 }
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 3s;
-  animation-name: fade;
-  animation-duration: 3s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .1} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .1} 
-  to {opacity: 1}
-}
-
 
   .bio {
       border-style: solid;
@@ -242,8 +211,8 @@ p2 {
 .home img{
     display: block;
     margin-top: 5%;
-    margin-left: 14%;
-    margin-right: 14%;
+    margin-left: 15%;
+    margin-right: 15%;
     margin-bottom: 10%;
     width: 70%;
     height: 40em;
